# aiogram-cloudflare-example

./: .gitignore  cf-requirements.txt  pyproject.toml  requirements.txt  wrangler.jsonc
src/: bot.py  entry.py
