[project]
name = "aiogram-cloudflare-worker"
version = "0.1.0"
description = "Telegram bot with aiogram on Cloudflare Workers"
requires-python = ">=3.12"
dependencies = [
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "pydantic-core==2.41.5",
    "annotated-types==0.7.0",
    "propcache==0.3.0",
    "multidict==6.7.0",
    "idna==3.10",
    "yarl==1.18.3",
    "propcache==0.3.0",
    "multidict==6.7.0",
    "frozenlist==1.6.0",
    "attrs==25.2.0",
    "frozenlist==1.6.0",
    "aiosignal==1.3.2",
    "aiohappyeyeballs==2.6.1",
    "pydantic==2.12.5",
    "certifi==v2026.1.4",
    "aiohttp==3.11.13",
    "aiogram==3.26.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]